(lang dune 3.11)

(name basic_example)

(generate_opam_files true)

(source
 (github Release-Candidate/OCaml-Buck-2-Examples))

(authors "Roland Csaszar")

(maintainers "Roland Csaszar")

(license MIT)

(documentation https://github.com/Release-Candidate/OCaml-Buck-2-Examples)

(package
 (name basic_example)
 (synopsis "Buck 2 basic OCaml example.")
 (description
  "Buck 2 basic OCaml example. Contains a library, an executable that uses the library and tests.")
 (depends ocaml dune)
 (tags (buck2)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
