(lang dune 3.11)

(name ppx_usage_example)

(generate_opam_files true)

(source
 (github Release-Candidate/OCaml-Buck-2-Examples))

(authors "Roland Csaszar")

(maintainers "Roland Csaszar")

(license MIT)

(documentation https://github.com/Release-Candidate/OCaml-Buck-2-Examples)

(package
 (name ppx_usage_example)
 (synopsis "Buck 2 Sedlex and Menhir example.")
 (description
  "Buck 2 Sedlex and Menhir example - shows the usage of PPX libraries with Buck 2. Contains a library, an executable that uses the library and tests.")
 (depends ocaml dune)
 (tags (buck2)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
